Add permission to use Face ID into Info.plist

--- a/Project28/Project28/Info.plist
+++ b/Project28/Project28/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>We need to use Face ID to identify yourself.</string>
 </dict>
 </plist>
